--- a/MVVM-Combine-SwiftUI/Modules/NoteList/Scene/View/NoteListTableViewCellXIB.xib
+++ b/MVVM-Combine-SwiftUI/Modules/NoteList/Scene/View/NoteListTableViewCellXIB.xib
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Him-ae-2Uu">
-                        <rect key="frame" x="328" y="38.666666666666664" width="28" height="26.666666666666664"/>
+                        <rect key="frame" x="265" y="38.666666666666664" width="28" height="26.666666666666664"/>
                         <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="28" id="NNg-iZ-d15"/>
@@ -24,15 +25,26 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1z-D9-NKx">
-                        <rect key="frame" x="16" y="16" width="296" height="71"/>
+                        <rect key="frame" x="16" y="16" width="233" height="71"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IkE-8Y-mfT">
+                        <rect key="frame" x="303.66666666666669" y="34" width="73.333333333333314" height="35"/>
+                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <buttonConfiguration key="configuration" style="plain" title="Delete"/>
+                        <connections>
+                            <action selector="didTapDeleteButton:" destination="-1" eventType="touchUpInside" id="Yt0-b5-vaj"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="Him-ae-2Uu" secondAttribute="trailing" constant="37" id="Kr6-lU-4qW"/>
+                    <constraint firstItem="IkE-8Y-mfT" firstAttribute="centerY" secondItem="Him-ae-2Uu" secondAttribute="centerY" id="3Sq-MR-rcY"/>
+                    <constraint firstAttribute="trailing" secondItem="Him-ae-2Uu" secondAttribute="trailing" constant="100" id="Kr6-lU-4qW"/>
                     <constraint firstItem="H1z-D9-NKx" firstAttribute="leading" secondItem="gGH-5K-vVG" secondAttribute="leading" constant="16" id="Lwt-yB-vIg"/>
+                    <constraint firstAttribute="trailing" secondItem="IkE-8Y-mfT" secondAttribute="trailing" constant="16" id="NCT-Ei-LFS"/>
                     <constraint firstItem="Him-ae-2Uu" firstAttribute="centerY" secondItem="gGH-5K-vVG" secondAttribute="centerY" id="O7y-co-hPq"/>
                     <constraint firstItem="H1z-D9-NKx" firstAttribute="top" secondItem="gGH-5K-vVG" secondAttribute="top" constant="16" id="OYx-qB-CYc"/>
                     <constraint firstItem="H1z-D9-NKx" firstAttribute="trailing" secondItem="Him-ae-2Uu" secondAttribute="leading" constant="-16" id="o3r-9x-i6J"/>
@@ -48,5 +60,8 @@
     </objects>
     <resources>
         <image name="checkmark.circle.fill" catalog="system" width="128" height="123"/>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
